--- a/taller3/src/main/resources/application.properties
+++ b/taller3/src/main/resources/application.properties
@@ -1,9 +1,9 @@
+spring.profiles.active=development
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
-
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
